# CBSCourse-PythonEssential

./: .gitignore  README.md  pyproject.toml
course/OOP/: animal.py
course/OOP/homework1/: book.py
course/OOP/homework2/: editor.py
course/OOP/inheritance_polymorphism/: pegasus.py
